<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_tendt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#009688"
            android:text="@string/tv_tendt" />
        <TextView
            android:id="@+id/tv_madt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#009688"
            android:text="@string/tb_madt" />

        <TextView
            android:id="@+id/tv_gia"
            android:textColor="#009688"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gia" />
    </LinearLayout>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_settings_cell_black_24dp"
        android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:text="@string/btnback"/>
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:text="@string/btnview"/>
</LinearLayout>
