<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#0286EE"
                android:text="@string/Main_UserName"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_namea"
                android:id="@+id/main_edtUserName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TextView
                android:textColor="#028AF3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Main_Pass"
                android:layout_weight="1"/>
            <EditText
                android:hint="@string/hint_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:id="@+id/main_edtPassword"/>
        </LinearLayout>
        <Button
            android:background="#80EC00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Login"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:id="@+id/main_btnLogin"/>
</LinearLayout>